@@ -5,7 +5,7 @@ permalink: /404.html
 <html lang="en" dir="ltr">
     <head>
         <meta charset="iso-8859-1">
-        <link href="css/layout.css" rel="stylesheet" type="text/css"/>
+        <link href="css/custom.css" rel="stylesheet" type="text/css"/>
     </head>
     
     <!-- 404 Error -->
