@@ -1,31 +1,26 @@
 # Blog of Miscellaneous Projects
 <pre>
 Created by:		DMCTruong
-Date of Last Update:  	July 3, 2017
-Percent of Completion:	45%
+Date of Last Update:  	July 11, 2017
+Percent of Completion:	46%
 Version:              	Projects Blog Version 2
+Website Link:		<a href="https://dmctruong.github.io/index.html">https://dmctruong.github.io/index.html</a>
 </pre>
 
 
 The Blog of Miscellaneous Projects is a website or blog that showcases some of the projects in my GitHub. Creating the website also serves to help me become a better developer. Feel free to come by and visit! The website is still in development so there are still a lot of content missing or the layout may seem a bit off. The website will eventually finish but until then, please hang tight!
 
-<a href="https://dmctruong.github.io/index.html">Click here to visit the website!</a>
-
-# Currently: 
-- Working on adding more information about the projects.
+# Currently:
+||
+|:------------------------------------------------------|
+|1. Working on adding more information about the projects. |
 
 # To-do List:
-- Add a page about the website's background
-- Working on X3DOM Project
-- Add a Java try-me
-- Update Contact page
-- Add a "please wait" message to gallery page
-- Fix the way previews are displayed in gallery modal
-
-
-
-
-
-
-
-
+||
+|:----------------------------------------------------|
+|1. Add a page about the website's background |
+|2. Working on X3DOM Project |
+|3. Add a Java try-me |
+|4. Update Contact page |
+|5. Add a "please wait" message to gallery page |
+|6. Fix the way previews are displayed in gallery modal |
