@@ -1,9 +1,10 @@
 /* 
-Site Name: 	A Miscellaneous Projects Blog
-Author   :	Diane Truong
-Date     :	July 3, 2017
+Site Name : 	A Miscellaneous Projects Blog
+Author :	Diane Truong
+Date :          July 10, 2017
+File :            custom.css
+Description : Contains custom styles that differs or overrides the default css
 */
-
 
 /* Default: Div / Wrapper */
 #container { display: block; width: 960px; padding: 10px 0; }
@@ -18,6 +19,7 @@ section { display: block; width: 100%; margin: 0 0 30px 0; padding: 0; }
 .clear:after { content: "." ; display: block;  visibility: hidden; height: 0; clear: both; line-height: 0; }
 .one_quarter { display: block; width: 290px; margin: 0 0px 0 0; float: left; }
 .one_fifth { width: 20% }
+
 /* Default: Text */
 #content_h3{ padding: 10px; font-size: 25px; text-transform: none; }
 body { margin: 0; background-color: #ffffff; font-family: Georgia, "Times New Roman", Times, serif; color: #000000; font-size: 14px; }
@@ -34,24 +36,29 @@ p_small { line-height: 50%; font-size: 15px; }
 .spacing_large { padding-top: 25px; padding-bottom: 35px; }
 .spacing_medium { padding-top: 20px; padding-bottom: 25px; }
 .spacing_small { padding-top: 10px; padding-bottom: 15px; }
+
 /* Default: Links */
 a { background-color: #ffffff; color: #0694bb; text-decoration: none; }
+
 /* Default Buttons */
 .download { cursor: pointer; display: inline-block; padding: 16px 32px; margin: 4px 2px; background-color: #ffffff; color: #000000; font-size: 16px; text-align: center; text-decoration: none; transition-duration: 0.4s; -webkit-transition-duration: 0.4s; border: 2px solid #ff0045; box-shadow: 0px 5px 5px #6d001e; }
 .download:hover { background-color: #ff0045; color: #ffffff; }
 .download_a:hover { color: #0694bb; text-decoration: none; }
+
 /* Default: Images */
 img { margin: 0; padding: 0; vertical-align: middle; line-height: normal; border: none;  }
 .circle_image { display: block; width: 200px; margin-left: auto; margin-right: auto; border-radius: 50%; border: #000000 1px solid; }
 .rectangle_image { display: block; overflow: hidden; box-shadow: 5px 5px 15px #c7dce5;  } 
 .image_slides { display: none; }
 .overlay { position: absolute; z-index: 2; }
+
 /* Default: Slide Shows */
 #slideshow{display: block; max-width: 870px; border: 1px solid #dedede;}
 #slideshow a { display: block; padding: 9px; }
 .img_preview { cursor: pointer }
 .opacity,.hover-opacity:hover { opacity: 0.60 }
 .opacity-off,.hover-opacity-off:hover { opacity: 1 }
+
 /* Default: Modals Div */
 #container #gallery_col { display: block; width: 290px; float: left; background-color: #ffffff; }
 #display_container { display: block; width: 1200px; }
@@ -59,6 +66,7 @@ img { margin: 0; padding: 0; vertical-align: middle; line-height: normal; border
 .caption-container { padding: 2px 16px; background-color: #000000; text-align: center; color: #ffffff; }
 .modal { display: none; position: absolute; overflow: hidden; width: 100%; left: 0; top: 0; z-index: 1; padding-top: 100px; background-color: #000000; }
 .modal-content { position: relative; margin: auto; padding: 0; width: 90%; max-width: 1200px; background-color: #000000; }
+
 /* Default: Modal Buttons */
 .close_button { position: absolute; right: 25px; top: 10px; color: #ffffff; font-size: 35px; font-weight: bold; }
 .close_button:hover, .close_button:focus { color: #999; text-decoration: none; cursor: pointer; }
@@ -67,83 +75,21 @@ img { margin: 0; padding: 0; vertical-align: middle; line-height: normal; border
 .prev_button:hover { color: #FF9900; }
 .next_button { position: absolute; width: auto; right: 0; top: 50%; margin-top: -50px; padding: 16px; background: #000000; color: #ffffff; font-size: 40px; font-weight: bold; border-radius: 3px 0 0 3px; transition: 0.6s ease; cursor: pointer; user-select: none; -webkit-user-select: none; }
 .next_button:hover { color: #FF9900; }
+
 /* Default: Modal Text */
 .slide_number { position: absolute; top: 0; padding: 8px 12px; color: #f2f2f2; font-size: 12px; }
+
 /* Default: Modal Images */
 img.hover-shadow { transition: 0.3s }
 .active { opacity: 1; }
 .modal_imgPreview { opacity: 0.6; }
 .modal_imgPreview:hover { opacity: 1; }
 .hover-shadow:hover { box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) }
+
 /* Default: Animations */
 .animate-fading { animation: fading 10s infinite } @keyframes fading { 0% { opacity: 0 } 50% { opacity: 1 } 100% { opacity: 0 } }
+
 /* Default: Page Loader */
 #page_loader { position: absolute; width: 50px; height: 50px; left: 50%; top: 50%; z-index: 1; border-radius: 50%; border: 7px solid #ffffff; border-top: 7px solid #e2352f; border-bottom: 7px solid #e2352f; animation: spin 2s linear infinite; -webkit-animation: spin 2s linear infinite; }
 @-webkit-keyframes spin { 0% { -webkit-transform: rotate(0deg); } 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-
-
-/* Navigation Page: Div */
-#header { display: block; width: 960px; }
-#heading { padding: 5px 0; }
-.navigation, .navigation a { color:#353535; background-color: #FFFFFF; } /* Overrides the default link color scheme */
-/* Navigation Page: Navigation Bar */
-nav ul { margin: 0; padding: 0; list-style: none; }
-#header nav { display: block; width: 870px; padding: 10px 0; border-top: 1px solid #dedede; border-bottom: 1px solid #dedede; }
-#header nav li { display: inline; margin-right: 40px; text-transform: uppercase; }
-#header nav li a:hover { color: #0694bb; background-color: #ffffff; }
-/* Navigation Page: Navigation Dropdown Lists */
-.dropbtn { padding: 16px; font-size: 16px; color: #ffffff; border: none; cursor: pointer; }
-.dropdown { display: inline-block; position: relative; }
-.dropdown-content { display: none; position: absolute;  min-width: 170px; z-index: 3; background-color: #f9f9f9; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); }
-.dropdown-content a { display: block; z-index: 3; padding: 12px 16px; color: #000000; }
-.dropdown-content a:hover { z-index: 3; background-color: #f1f1f1 }
-.dropdown:hover .dropdown-content { display: block; }
-
-
-/* Index and Projects Page: Categories/Projects Section */
-.index_grad { margin-top: -30px; width: 870px; height: 150px; padding: 75px; background: #e8f9f9; background: -webkit-linear-gradient(#e8f9f9, #ffffff); background: -o-linear-gradient(#e8f9f9, #ffffff); background: -moz-linear-gradient(#e8f9f9, #ffffff); background: linear-gradient(#e8f9f9, #ffffff); }
-.index_last { display: block; width: 100%; }
-#projects ul { margin: 0; padding: 10px; list-style: none; }
-#projects ul li { display: block; width: 100%; margin-bottom: 100px; }
-#projects ul li article figure img { margin: 0px 0px 0px -170px; object-fit: cover; width: 275px; height: 150px; float: left;}
-#projects ul li article figure figcaption { display: block; padding: 25px; float: left; width: 650px; height: 149px; background: #ffffff; outline: 1px solid #dedede; box-shadow: 5px 5px 15px #c7dce5; }
-#projects ul li article h1 { font-size: 15px; letter-spacing: .3px; text-transform: none; }
-#projects ul li article figure h2 { font-size: 14px; }
-
-/* Computer Graphics Page: Columns */
-#col1 { display: block; padding: 15px; float: left; width: 290px; height: 400px; color: #b0dbda; background-color: #1a1c1c; }
-#col2 { display: block; padding: 15px; float: left; width: 290px; height: 400px; color: #ffffff; background-color: #3d4140; }
-#col3 { display: block; padding: 15px; float: left; width: 290px; height: 400px; color: #000000; background-color: #ffefea; }
-
-
-/* Tools Page: Image Style */
-#tools_projects ul { margin: 0; padding: 10px; list-style: none; }
-#tools_projects ul li { display: block; width: 100%; height: 150px; margin-bottom: 100px; background: #24292e; box-shadow: 7px 5px 15px #3f5668; }
-#tools_projects ul li article figure img { width: 80px; height: 80px; margin-top: 30px; padding: 4px; float: left; }
-#tools_projects ul li article figure figcaption { display: block;  width: 610px; height: 120px;  margin-left: 10px; margin-top: 20px; padding: 25px; float: left; background: #24292e; color: #f4f4f4;}
-#tools_projects ul li article h4 { text-align: center; color: #42f4eb; font-size: 20px; letter-spacing: .3px; text-transform: none; }
-#tools h2 { font-size: 30px; text-transform: none; }
-.tools_read_more { text-align: right; background: #24292e; color: #42f4eb; font-size: smaller; font-weight: bold; }
-.tools_read_more a { background: #24292e; color: #42f4eb }
-
-
-/* Contacts Page: Contents */
-#about { display: block; width: 870px;  padding-left: 60px; padding-right: 60px; padding-top: 25px; padding-bottom: 60px; background-color: #282c2c; color: #e3f2f0; box-shadow: 1px 5px 7px #a39b97; }
-#contact { display: block; margin-top: 50px; width: 870px; padding-top: 40px; padding-bottom: 30px; background-color: #333839; color: #e3f2f0; box-shadow: 1px 3px 6px #a39b97; }
-#contact p { line-height: 25%;}
-
-
-/* Footer Page: Formatting */
-#footer { display: block; width: 960px; height: 100px; padding: 20px 0; background: #ffffff; }
-#footer p { width: 870px; margin: auto; padding: 25px; float: left; }
-.footer { margin: 90px; align: center;  border-top: 1px solid #DEDEDE; }
-.footer, .footer a { width: 870px; background-color: #FFFFFF; color: #000000; }
-
-
-
-
-
-
-
-
