@@ -1,4 +1,5 @@
+<link rel="stylesheet" href="css/custom.css" type="text/css">
+<link rel="stylesheet" href="css/default.css" type="text/css">
 <link rel="stylesheet" href="css/spectrum.css" />
-<link rel="stylesheet" href="css/layout.css" type="text/css">
 <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" type="text/css"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret+One|Quicksand|Raleway|Josefin+Sans"> 
