@@ -1,3 +1,6 @@
+07/11/17
+- Split layout.css into default.css and custom.css
+
 07/3/17
 - Changed contact.html and projects_employee.html
 - Removed unused files
